[gd_scene load_steps=4 format=2]

[ext_resource path="res://BasicLevel.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/PauseScreen.tscn" type="PackedScene" id=3]


[node name="BasicLevel" type="Node2D" index="0"]

script = ExtResource( 1 )
startPosition = null

[node name="Player" parent="." index="0" instance=ExtResource( 2 )]

[node name="Camera2D" type="Camera2D" parent="Player" index="3"]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1.5, 1.5 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = true
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.1
drag_margin_top = 0.2
drag_margin_right = 0.1
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = true
_sections_unfolded = [ "Drag Margin", "Editor", "Limit", "Offset", "Smoothing", "Visibility" ]

[node name="PauseScreen" parent="." index="1" instance=ExtResource( 3 )]

[connection signal="kill" from="Player" to="." method="_on_Player_kill"]

[connection signal="pause" from="Player" to="." method="_on_Player_pause"]


